slight change to images

--- a/images.html
+++ b/images.html
@@ -8,7 +8,7 @@
     <title>Images</title>
 </head>
 <body>
-
+<p>You are on branch2</p>
 <!--local image-->
 
 <img src="images/Wonderlust1.jpg" alt="Apple wonderlust event" width="100%" height="100%">
